@@ -1,0 +1,4 @@
+# Specifies target, available:
+# - applet : applet environment
+# - app : standalone application
+target = app
